--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@ html, body {
     margin: 0;
     font-family: 'Helvetica Neue', sans-serif;
 }
+a {
+    color: inherit;
+    text-decoration: inherit;
+}
 nav {
     width: 100%;
     height: 70px;
@@ -37,6 +41,9 @@ nav {
 .list:hover {
     background: #282C34;
 }
+.list_active {
+    background: #282C34;
+}
 /*******CONTENT********/
 #content_wrapper {
     width: calc(100% - 200px);
@@ -45,7 +52,7 @@ nav {
     min-height: calc(100vh - 70px);
     color: #21252B;
 }
-#content_header {
+#list_name {
     text-align: center;
     margin: 10px 0px;
 }
